# pd_model

./: .gitignore  model.ipynb  pyproject.toml
