[tool.poetry]
name = "pd-model"
version = "0.1.0"
description = ""
authors = ["Sreekar <sreekargv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
logging = "^0.4.9.6"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
